--- a/.travis.yml
+++ b/.travis.yml
@@ -28,16 +28,7 @@ script:
     - |
       case "${BUILD_TYPE}" in
         Tests)
-          # make all
-          echo "Launch BTRFS tests"
-          go test -v -c  github.com/sonm-io/core/insonmnia/worker/storagequota/btrfs -o ./btrfs.test
-          LOOP_DEVICE=$(sudo losetup -f)
-          sudo dd if=/dev/zero of=/btrfsfile bs=1024000 count=200
-          sudo losetup $LOOP_DEVICE /btrfsfile
-          sudo mkfs.btrfs /btrfsfile
-          sudo mkdir /btrfsplayground
-          sudo mount -t btrfs $LOOP_DEVICE /btrfsplayground
-          sudo BTRFS_PLAYGROUND_PATH=/btrfsplayground ./btrfs.test -test.v
+          make all
           ;;
         Contracts)
           make contracts
