feat: restrict Optimus CPU usage via cgroup
This commit allows to restrict Optimus CPU usage via cgroups from the config.
Since Optimus can consume significant amount of CPU this can be useful for semi-automatic resource restrictions.

--- a/etc/optimus.yaml
+++ b/etc/optimus.yaml
@@ -3,6 +3,13 @@ logging:
   # Allowed values are "debug", "info", "warn", "error", "panic" and "fatal"
   level: debug
 
+# Resource restrictions settings.
+restrictions:
+  # CGroup name for Optimus.
+  cgroup_name: /optimus
+  # Maximum CPU cores allowed for consumption.
+  cpu_count: 0.5
+
 # Global account settings.
 # Used by all components unless overridden.
 ethereum: &ethereum
