feat: price predictor service
This commit allows to optionally activate order price predictor service
on Node.
This service is capable of continious training on current marketplace's
state to be able to predict an order price from its benchmarks and
netflags.

--- a/etc/node.yaml
+++ b/etc/node.yaml
@@ -44,7 +44,7 @@ log:
   level: debug
 
 # Settings for Ethereum keys
-ethereum:
+ethereum: &ethereum
   # path to keystore
   key_store: "./keys"
   # passphrase for keystore
@@ -59,3 +59,19 @@ blockchain:
   # gas price for masterchain transactions, in wei
   # default is 20 Gwei
   # masterchain_gas_price: 20Gwei
+
+# Order price predictor settings.
+# Optional.
+predictor:
+  marketplace:
+      # Account settings.
+      ethereum: *ethereum
+      # DWH endpoint.
+      endpoint: 0xadffcac607a0a1b583c489977eae413a62d4bc73@dwh.livenet.sonm.com:15021
+      # Interval of current orders caching, that are fetched from the marketplace.
+      interval: 30s
+      # Minimum price threshold for fetching orders from the marketplace.
+      # Used to prevent regression poisoning.
+      # Optional.
+      # Default value is 0.0001 USD/h, which is nearly about 1 USD per year.
+      min_price: 0.0001 USD/h
