--- a/etc/optimus.yaml
+++ b/etc/optimus.yaml
@@ -162,7 +162,12 @@ workers:
     # Zero value is forbidden, because it leads to spot deals being replaced
     # each epoch.
     # Required.
-    # Possible dimensions are USD/s, USD/h.
+    # Possible dimensions are USD/s, USD/h. May be specified either as absolute
+    # or relative. For example "0.02 USD/h" would mean that Optimus will
+    # reassembly all bids if a new combination gives more than "0.02 USD/h"
+    # profit that the existing one.
+    # If you want to activate relative threshold in percents, specify "%" after
+    # the value, for example "2.5%".
     price_threshold: 0.02 USD/h
     # When activated Optimus will not create ask plans, but continues doing
     # the rest calculations instead. Useful for debugging.
