--- a/debian/sonm-relay.service
+++ b/debian/sonm-relay.service
@@ -11,4 +11,5 @@ LimitNOFILE=65535
 
 
 [Install]
-WantedBy=multi-user.target
+Wants=network-online.target
+After=network.target network-online.target
