fix: proper task start in Connor
This commit increases task starting timeout and makes it configurable.
Also, on `StartTask` retrying we'll check that previous attempt doesn't
really start a task.

--- a/etc/connor.yaml
+++ b/etc/connor.yaml
@@ -69,6 +69,10 @@ engine:
   # interval between task starting retries
   # default: 15s
   task_start_interval: 15s
+  # connection timeout for task start method,
+  # increase this value if image size is large
+  # default: 3m
+  task_start_timeout: 3m
   # interval between task status tracking calls
   # default: 15s
   task_track_interval: 15s
