--- a/bid.yaml
+++ b/bid.yaml
@@ -1,5 +1,5 @@
-duration: 8h
-price: 2.5 USD/h
+duration: 0s
+price: 0.001 USD/h
 
 # Optional - restricts buying resources only from specified address.
 #counterparty: 0x8125721c2413d99a33e351e1f6bb4e56b6b61567
