feat: counterparty address for Connor's orders
This commit adds an ability to set counterparty address and place orders only for the required supplier. Also, migration code was added.
If a user wants to change non-main benchmark or set counterparty or change netflags,
Connor should be able to detect, that new requirements is changed.
It reached with partial order hashing when we decide to restore existing order or not.

--- a/etc/connor.yaml
+++ b/etc/connor.yaml
@@ -9,6 +9,10 @@ market:
   to: 300000000
   step: 500000
 
+  # set counterparty address if you want to place orders
+  # only for specified supplier.
+  # counterparty: 0xD0E743fFDBaEdAa3cf4E3232f3C1aB18ee9ca4aB
+
   price_control:
     # what part of the real market price will be used to
     # create orders on the market
