--- a/task.yaml
+++ b/task.yaml
@@ -16,6 +16,9 @@ container:
   # Adds an ability to pull container back.
   # Optional.
   commit_on_stop: false
+  # Push the committed image to remote repository (works only if commit_on_stop is set to `true`).
+  # Optional.
+  push_on_stop: false
   # Volumes settings.
   # Optional.
   volumes:
