--- a/etc/worker.yaml
+++ b/etc/worker.yaml
@@ -63,6 +63,8 @@ whitelist:
   # URL to downloads list of allowed containers.
   url: "https://raw.githubusercontent.com/sonm-io/allowed-list/master/general_whitelist.json"
   enabled: true
+  # allow users of this level or higher to skip whitelist
+  privileged_identity_level: identified
 
 matcher:
   poll_delay: 10s
