--- a/etc/worker.yaml
+++ b/etc/worker.yaml
@@ -62,6 +62,7 @@ benchmarks:
 whitelist:
   # URL to downloads list of allowed containers.
   url: "https://raw.githubusercontent.com/sonm-io/allowed-list/master/general_whitelist.json"
+  # Deprecated: use PrivilegedIdentityLevel instead
   enabled: true
   # allow users of this level or higher to skip whitelist
   privileged_identity_level: identified
