refact: restrict image push with KYC level (#1458)
This PR introduces ACL which checks KYC level and allow only users of a specific level to push custom images on the worker. Also, it's made configurable and it is reused in whitelist configuration.
Closes #1434.

--- a/etc/worker.yaml
+++ b/etc/worker.yaml
@@ -62,7 +62,10 @@ benchmarks:
 whitelist:
   # URL to downloads list of allowed containers.
   url: "https://raw.githubusercontent.com/sonm-io/allowed-list/master/general_whitelist.json"
+  # Deprecated: use PrivilegedIdentityLevel instead
   enabled: true
+  # allow users of this level or higher to skip whitelist
+  privileged_identity_level: identified
 
 matcher:
   poll_delay: 10s
