--- a/etc/dwh.yaml
+++ b/etc/dwh.yaml
@@ -13,7 +13,8 @@ ethereum:
   pass_phrase: "any"
 
 blockchain:
-  blocks_batch_size: 500000
+   sidechain_endpoint: "http://localhost:8545"
+   blocks_batch_size: 500000
 
 logging:
   # The desired logging level.
