--- a/debian/sonm-node.service
+++ b/debian/sonm-node.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=SONM Node
+Wants=network-online.target
+After=network.target network-online.target
 
 
 [Service]
@@ -11,5 +13,4 @@ Restart=on-failure
 
 
 [Install]
-Wants=network-online.target
-After=network.target network-online.target
+WantedBy=multi-user.target
