--- a/debian/sonm-rendezvous.service
+++ b/debian/sonm-rendezvous.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=SONM Rendezvous
+Wants=network-online.target
+After=network.target network-online.target
 
 
 [Service]
@@ -11,5 +13,4 @@ LimitNOFILE=65535
 
 
 [Install]
-Wants=network-online.target
-After=network.target network-online.target
+WantedBy=multi-user.target
