--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ services:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install debhelper devscripts fakeroot dh-systemd ocl-icd-opencl-dev libnl-3-dev libnl-route-3-dev -y
+  - sudo apt-get install debhelper devscripts fakeroot dh-systemd ocl-icd-opencl-dev libnl-3-dev libnl-route-3-dev btrfs-tools -y
 
 install:
   - git submodule update
