--- a/ask.yaml
+++ b/ask.yaml
@@ -1,25 +1,21 @@
-duration: 8h
-price: 23.73 USD/h
-
-blacklist: 0x8125721c2413d99a33e351e1f6bb4e56b6b633fd
+duration: 0h
+price: 0.0 USD/h
 
 # optional - restricts selling resources only to specified address
-# counterparty: 0x8125721c2413d99a33e351e1f6bb4e56b6b61567
+counterparty: 0xb95b73D95bee11038Bab90cf2cc15985E2F9be4d
 identity: anonymous
 
 resources:
   cpu:
     # Number of cores to assign for this plan, can be fractional
-    cores: 1.5
+    cores: 1
   ram:
-    size: 2GB
+    size: 1GB
   storage:
-    size: 10GB
-  gpu:
-    indexes: [3, 5]
+    size: 5GB
   network:
-    throughputin: 25 Mbit/s
-    throughputout: 40 Mbit/s
-    overlay: true
-    outbound: true
-    incoming: true
+    throughputin: 5 Mbit/s
+    throughputout: 5 Mbit/s
+    overlay: false
+    outbound: false
+    incoming: false
