feat: adapt extra orders in Connor
This commit adds config option that change `restoreMarketState` behavior.
If `no_cancel` parameter is enabled, Connor will adapt orders that not fits in target orders set.

--- a/etc/connor.yaml
+++ b/etc/connor.yaml
@@ -13,6 +13,11 @@ market:
   # only for specified supplier.
   # counterparty: 0xD0E743fFDBaEdAa3cf4E3232f3C1aB18ee9ca4aB
 
+  # set to true if Connor should adapt excess orders
+  # (which are not fits in the target set), otherwise, orders will be canceled.
+  # Default: false
+  # no_cancel: false
+
   price_control:
     # what part of the real market price will be used to
     # create orders on the market
