feat: generalized log parser for Connor.
This commit removes particular log parser with a single one with a subset of settings which can be applied to (almost) any logs with a number in their fields.
Log reader now has 3 options related to logline analyzing:
1. String pattern to detect line with logs. E.g: line that has 'Total speed' in it will be analyzed, if it doesn't - we'll skip this line.
2. Field number in line. Describes which position in a string is a numeric value that shows task quality (hash rate, actually).
3. The multiplier for parsed value. Used when a field contains the value in KHash/s or MHash/s. Use `1` if the multiplier is not applicable for the value.

--- a/etc/connor.yaml
+++ b/etc/connor.yaml
@@ -101,11 +101,21 @@ antifraud:
   connection_timeout: 60s
 
   log_processor:
-    format: claymore
+    format: common
     track_interval: 30s
     warmup_delay: 5m
     # EWMA decay factor, seconds
     decay_time: 900
+    # string pattern to detect meaningful line in logs
+    # Required.
+    pattern: "Total Speed:"
+    # field in a meaningful log line that contain numeric value
+    # with hashrate, counts from zero.
+    # Required.
+    field: 4
+    # multiplier for parsed value, used when field contains
+    # value in KHash/s or MHash/s. Use `1` if multiplier is not applicable for the value.
+    multiplier: 1000000
 
   pool_processor:
     format: dwarf
