--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ go:
 env:
   global:
     - GO111MODULE=on
+    - PKG_CONFIG_PATH=/usr/local/lib/pkgconfig
   matrix:
     - BUILD_TYPE=Tests
     - BUILD_TYPE=Debian
@@ -20,7 +21,7 @@ services:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install debhelper devscripts fakeroot dh-systemd ocl-icd-opencl-dev libnl-3-dev libnl-route-3-dev btrfs-tools -y
+  - sudo apt-get install debhelper devscripts fakeroot dh-systemd ocl-icd-opencl-dev libnl-3-dev libnl-route-3-dev btrfs-tools libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev libsdl2-gfx-dev -y
 
 install:
   - git submodule update
