--- a/debian/sonm-connor.service
+++ b/debian/sonm-connor.service
@@ -8,7 +8,7 @@ After=network.target network-online.target
 EnvironmentFile=/etc/default/sonm-connor
 Type=simple
 ExecStart=/usr/bin/sonmconnor --config=${CONFIG_PATH}
-Restart=on-failure
+Restart=always
 
 
 [Install]
