--- a/debian/sonm-dwh.service
+++ b/debian/sonm-dwh.service
@@ -8,7 +8,7 @@ After=network.target network-online.target
 EnvironmentFile=/etc/default/sonm-dwh
 Type=simple
 ExecStart=/usr/bin/sonmdwh --config=${CONFIG_PATH}
-Restart=on-failure
+Restart=always
 LimitNOFILE=65535
 
 
