--- a/debian/sonm-optimus.service
+++ b/debian/sonm-optimus.service
@@ -8,7 +8,7 @@ After=network.target network-online.target
 EnvironmentFile=/etc/default/sonm-optimus
 Type=simple
 ExecStart=/usr/bin/sonmoptimus --config=${CONFIG_PATH}
-Restart=on-failure
+Restart=always
 
 
 [Install]
