--- a/debian/sonm-oracle.service
+++ b/debian/sonm-oracle.service
@@ -8,7 +8,7 @@ After=network.target network-online.target
 EnvironmentFile=/etc/default/sonm-oracle
 Type=simple
 ExecStart=/usr/bin/sonmoracle --config=${CONFIG_PATH}
-Restart=on-failure
+Restart=always
 
 
 [Install]
