--- a/debian/sonm-relay.service
+++ b/debian/sonm-relay.service
@@ -8,7 +8,7 @@ After=network.target network-online.target
 EnvironmentFile=/etc/default/sonm-relay
 Type=simple
 ExecStart=/usr/bin/sonmrelay --config=${CONFIG_PATH}
-Restart=on-failure
+Restart=always
 LimitNOFILE=65535
 
 
