--- a/debian/sonm-worker.service
+++ b/debian/sonm-worker.service
@@ -8,7 +8,7 @@ After=network.target network-online.target
 EnvironmentFile=/etc/default/sonm-worker
 Type=simple
 ExecStart=/usr/bin/sonmworker --config=${CONFIG_PATH}
-Restart=on-failure
+Restart=always
 
 
 [Install]
