--- a/blockchain/source/package.json
+++ b/blockchain/source/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "",
   "directories": {},
-  "scripts": {},
+  "scripts": {
+    "postinstall": "patch-package"
+  },
   "author": "SONM team",
   "license": "MIT",
   "dependencies": {
@@ -31,6 +33,7 @@
     "left-pad": "^1.3.0",
     "merkle-tree-solidity": "^1.0.8",
     "mocha-junit-reporter": "^1.17.0",
+    "patch-package": "^5.1.1",
     "solidity-coverage": "^0.5.1",
     "solidity-sha3": "^0.4.1",
     "solium": "^1.1.7",
