--- a/task.yaml
+++ b/task.yaml
@@ -51,6 +51,12 @@ container:
   networks:
   - type: tinc
     subnet: "10.20.30.0/24"
+  # Expose container ports if public ip is provided in deal. Format is "public_ip:public_port:private_port/protocol".
+  # Protocol can be "tcp", "udp", "sctp".
+  # If the "protocol" parameter is ommited "tcp" is implied.
+  # If the "public_ip" parameter is ommited then the port is being exposed on all available ips.
+  expose:
+  - 8080:80
 
 # Custom registry settings.
 # Optional.
