refactor: special folder for migrations artifafts

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ metrics/config_test.json
 # truffle installs OpenZeppelin contracts here
 blockchain/node_modules
 
+blockchain/build
+
 vendor/github.com/golang/mock/mockgen/mockgen
 
 token.txt
