feat: oracle must process logs starting from the current block (#1625)
This PR extends oracle with the following option: now it can process transactions from the current block, not from the beginning of the times. It was made because restarting non-master Oracle instance leads to full transaction log re-process, which is obviously useless.

--- a/etc/oracle.yaml
+++ b/etc/oracle.yaml
@@ -15,11 +15,16 @@ blockchain:
   #endpoint: https://rinkeby.infura.io/00iTrs5PIy0uGODwcsrb
   #sidechain_endpoint: https://sidechain-dev.sonm.com
   #contract_registry: 0xaf1ffd7f652be7e9a0854a42b2d3046f853f80f1
+  blocks_batch_size: 50000
 
 oracle:
   # In master mode this instance submitting price changing
   # In slave mode this instance confirm changing
   is_master: false
+  #  from_now` parameter forces Oracle to process transactions only from the current block, otherwise, it will read whole transaction history from the beginning of times.
+  #  This parameter works only if slave mode is active.
+  #  Default: true.
+  # from_now: true
   # priceUpdatePeriod defines period to update snm/usd price in this oracle instance
   #price_update_period: "15s"
   # contractUpdatePeriod defines period to update snm/usd price in oracle contract
