feat: lease the entire machine mode in Optimus

--- a/etc/optimus.yaml
+++ b/etc/optimus.yaml
@@ -204,6 +204,7 @@ workers:
     # This mode is required mostly for debugging.
     #simulation:
     #  orders: [42, 43]
+    plan_policy: entire_machine
 
 debug:
   port: 6060
